@@ -1,5 +1,8 @@
 2014-05-16  Roland McGrath  <roland@hack.frob.com>
 
+	* sysdeps/unix/sysv/linux/tile/arch-fork.h: New file.
+	* sysdeps/unix/sysv/linux/tile/nptl/fork.c: File removed.
+
 	* sysdeps/unix/sysv/linux/arch-fork.h: New file.
 	* sysdeps/unix/sysv/linux/i386/fork.h: Moved ...
 	* sysdeps/unix/sysv/linux/i386/arch-fork.h: ... here.
